syntax = "proto3";

option csharp_namespace = "MCIO.Demos.Store.Ports.ClientWebBFF";

package MCIO.Demos.Store.Ports.ClientWebBFF;

service PingService {
  rpc Ping(PingRequest) returns (PingReply);
}

message PingRequest {

}

message PingReply {

}
